Fixed spacing and ignored rest of the elements. Just needed position lol.

--- a/app/assets/stylesheets/toad.css.scss
+++ b/app/assets/stylesheets/toad.css.scss
@@ -64,6 +64,7 @@
 	cursor: pointer;
   padding: 0;
   margin: 0;
+  position: absolute;
 }
 
 .ui-state-focus {
